Add API communication

--- a/tasks.json
+++ b/tasks.json
@@ -1,8 +1,1 @@
-[
-    "HTML",
-    "CSS",
-    "Responsive Design",
-    "Javascript",
-    "PHP",
-    "Laravel"
-]
+["C++","C","HTML","CSS","Responsive Design","Javascript","PHP","Laravel"]
