--- a/tasks.json
+++ b/tasks.json
@@ -1,34 +1,1 @@
-[
-    {
-        "language": "C++",
-        "done": false
-    },
-    {
-        "language": "C",
-        "done":false
-    },
-    {
-        "language": "HTML",
-        "done":false
-    },
-    {
-        "language": "CSS",
-        "done":false
-    },
-    {
-        "language": "Responsive Design",
-        "done":false
-    },
-    {
-        "language": "Javascript",
-        "done":false
-    },
-    {
-        "language": "PHP",
-        "done":false
-    },
-    {
-        "language": "Laravel",
-        "done":false
-    }
-]
+[{"language":"C++","done":false},{"language":"C","done":false},{"language":"HTML","done":false},{"language":"CSS","done":false},{"language":"Responsive Design","done":false},{"language":"Javascript","done":false},{"language":"PHP","done":false},{"language":"Laravel","done":false}]
