--- a/tasks.json
+++ b/tasks.json
@@ -1,1 +1,1 @@
-[{"language":"R","done":true},{"language":"C#","done":true}]
+[{"language":"C","done":false},{"language":"R","done":true},{"language":"C#","done":true}]
